apps/uploader/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: uploader
  namespace: ynoacamino
  labels:
    app: uploader

spec:
  replicas: 1
  selector:
    matchLabels:
      app: uploader
  template:
    metadata:
      labels:
        app: uploader
    spec:
      containers:
        - name: uploader
          image: ynoacamino/ynoa-uploader:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 3000
              protocol: TCP
