apps/uploader/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: uploader
  namespace: ynoacamino
  labels:
    app: uploader

spec:
  type: ClusterIP
  selector:
    app: uploader
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
