apps/uploader/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: uploader
  namespace: ynoacamino
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    traefik.ingress.kubernetes.io/redirect-entry-point: https

spec:
  tls:
    - hosts:
        - uploader.ynoacamino.me
      secretName: uploader-tls

  rules:
    - host: uploader.ynoacamino.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uploader
                port:
                  number: 80
